--- a/source/_posts/再次禁言（推特：老蛮频道-2023-05-10）.md
+++ b/source/_posts/再次禁言（推特：老蛮频道-2023-05-10）.md
@@ -1,4 +1,4 @@
-title: 再次禁言（推特：老蛮频道 2023.05.10- 2023.05.16）
+title: 再次禁言（推特：老蛮频道 2023.05.10- 2023.05.17）
 author: laoman
 date: 2023-05-15 22:49:46
 tags:
@@ -192,3 +192,79 @@ tags:
 
 而美欧呢？本来连考场都不用上，现在上了考场也觉得自己稳操胜券。好吧，现在还有99.99%胜率吧，总归已经不是百分百。不管你什么级别的BOSS，露出了血条就可以打了。美欧再这么继续左下去的话，胜率继续往下降，那就是板上钉钉的事。
 - - -
+5.17
+
+继续深入讨论“社会动员” 问题。人类自从进入工业化时代之后，真正的有意识的由政府实施全民总动员，始于1930年代的大萧条。在萧条之下，有三个国家建立了各自不同的动员模式：德国、苏联和美国。这里先说德国。
+
+在德国，希特勒自1933年初走到权力舞台的中央，开始推行“国家社会主义”，这是融社会主义和凯恩斯主义于一体的怪胎，简称纳粹主义。社会主义的特征就是政府办企业，而凯恩斯主义的特征则是大量发行政府债务，以维持政府的投资能力。希特勒的具体措施包括：1、大量发行国债，并规定所有经济实体都有义务按规定额度购买。2、将大量的破产边缘的小企业收归国有并合并为几个大型国有集团，统一招募工人并按计划生产。3、组建国有军工集团，大量招募工人，产品由国家统一购买。4、建立起系统的社会福利体系，包括最低工资制度、失业救济、养老以及成人再教育体系。5、国家投资推进基础设施建设以及重大科研活动。这一系列的组合拳需要巨量的财政投入，仅靠发行国债无法维持，德国又没法像纯计划经济的苏联那样强行规定并维持住德国马克的汇率，所以不敢放开了印钱，于是希特勒将国内最富裕的犹太群体列为全国公敌，于1936年发布《犹太问题最终解决方案》，犹太家庭的财产被没收，纳入国库。这种种措施迅速补充了德国人的底层购买力，德国经济迅速发展起来，到1939年（也是二战爆发的那一年）失业人数下降到仅30万，这几乎算是零失业率了，已经是完全走出了大萧条的影响。
+
+然而纳粹模式的问题在于不可持续。犹太人群体的财富薅一把也就没有了；德国政府强行捏合起来的几个大型企业也面临效率低下的问题，并不能创造利润；至于军工厂，除了可以偷偷摸摸的卖点军火给内战中的中华民国之外，就指着政府收购了，也创造不出多少利润；更何况还有庞大的福利负担。如此累积起来，德国政府的财政负担极重，在数据上，1938年德国财政收入177亿马克，而财政支出超过300亿马克，几乎相当于收入水平的一倍。这种财政窟窿，已经没法指望再没收犹太人财产来填了，只能依靠发行国债，但是德国人也就是刚刚从惨烈的经济危机里走出来，羊毛也薅不了几天，消化国债的能力也就是一般般。希特勒迫于无奈，在巨大的财政压力面前焦头烂额，于是最终决定发起侵略战争。
+
+在战争初期，德国凭借其纳粹体系，拥有远胜其它欧式民主国家的战争动员能力。关键的战争资源全都由德国政府组织起来的少数大型国有企业掌控；至于青壮国民，也早已被强大的纳粹宣传机器洗脑，政治权力的触角可以轻易延伸到每个最底层的德国平民身上。相比较而言，其它欧式民主国家深受英国式的大宪章影响，在议会内部没有任何政治派系具备压倒性的政治优势，在经济领域也没有足以掌控战争资源的企业，财团这种东西，在欧式民主国家基本上就没有生存空间。不能集中权力和资源，欧洲各民主国家面对德国人的攻势，当然毫无还手之力。
+
+于是德国人打出了震惊世界的闪电战。奥地利、捷克斯洛伐克、波兰、丹麦、挪威、荷兰、比利时、卢森堡、法国，基本上维持一周灭一小国的节奏。
+
+这种节奏一直维持到1941年6月，德国攻入苏联。德国杂糅了社会主义与凯恩斯主义的纳粹总动员模式，与苏联极其纯粹的社会主义动员模式，轰然对撞。
+（待续）
+- - -
+（动员的简史，第二集）
+苏联能够挡住德国军队的攻势，依赖的当然是它足够强大的动员能力，而苏联建立这种动员能力的过程，只要我们每个人对未来的经济走势稍有关心，就有必要了解。
+
+1917年苏联建国，但对于如何发展经济，一开始也是摸不清方向，所谓社会主义这个词，也就是个口号，如何具体实施，根本就没人知道。一直到1928年，苏联经济都还算是原始的农业经济，为了养活规模日益庞大的军队并向外输出革命，苏联政府不停的加征农税，农民生活日益艰难。这种模式如果继续下去，苏联经济根本就坚持不下去。1928年，苏联终于开启了真正的社会主义制度变革，启动了“第一个五年计划”，政府投资设立国有工业企业，有组织有计划的建立起完整的重工业产业链。在农业领域则设立集体农社，农民集中劳作，产出的作物除了农民必须的口粮之外全部上缴国家。
+
+苏联在工业领域实行完全国有化的措施取得了巨大的成效，仅仅到1937年，第二个五年计划完成的时候，此前还算是个纯农业国的苏联，工业产能就发展成全欧洲第一，基于炼油的石化工业以及基于炼钢的重型装备工作，都已经发展起来，并基本实现了国产化。在数据上，1937年苏联的的工业总产值占世界的10.6%，仅次于美国。超过德国、英国、法国跃居欧洲第一位，世界第二位。
+
+在这种奇迹般的经济总动员背后，最关键的因素在于，苏联卢布具备强大的购买力。在当时来说，卢布算是唯一一种由国家信用直接担保的货币。苏联政府向欧美国家下的购买生产线的订单，也总是遭遇各国濒临破产的大企业的争抢，根本不考虑收到手的卢布如何兑换的问题。与此同时，苏联的这第一个五年计划发动的时间，又恰恰是欧美世界的惨烈的大萧条时期，数以万计的欧美失业的工程师移居苏联，帮助苏联迅速完成了原始技术积累。这两个因素叠加，是苏联在工业领域能取得成功的关键因素。
+
+然而与此同时，苏联在农业领域的集体化建设则迎来了惨痛的失败，剩余劳动成果被无偿剥夺的苏联农民火冒三丈，纷纷选择怠工甚至直接破坏生产，于是从1940年代开始，地广人稀的苏联居然三天两头就爆发饥荒，最惨烈的时候竟然饿死了上百万人，最后被迫大规模进口粮食。看起来经济的规律就是：在工业领域，政府可以直接干预到底；然而，在农业领域，政府必须服从人类个体自私与自由的天性，不能肆意干预农民的生产组织活动。
+
+1941年6月，德国兵分三路入侵苏联，这意味着杂糅式的纳粹模式，开始与纯粹的社会主义模式，进行直接的对抗。到了这个时候，我们就必须要分析这两种动员模式的优劣了。社会主义模式之下，政府掌握了全部的经济资源，企业都没有利润留存这一说，老百姓从出生到死，教育、工作、居住和医疗等重大开销都由政府负责，也不需要进行储蓄。因此，社会主义模式下的政府可以最大程度的集中全社会的资源来应对危机，而且不需要付出什么代价。
+
+而纳粹模式始终都是建立在传统的自由资本主义制度之上。虽然它融入了社会主义的元素，政府组建起了关键性的国有企业集团，掌控住了国家经济命脉型的核心产业，但是组成社会的最基本的原子，日用五金、零售餐饮、居民服务行业等等，依然是传统的自由资本主义体系。在货币发行方面，希特勒不得不受制于德国传统的金本位制度，以黄金作为货币发行的基本依据，没有黄金又要用钱，就只能抢犹太人的钱，或者发行国债。这种种莫名其妙的制约，让希特勒根本不可能放开手脚大干一场。
+
+如此两相对比，德国对苏联的败亡，也就是时间问题而已。1941年9月，在德军攻入莫斯科之后，双方就陷入了僵持状态。苏联发布全民总动员令，就此发起了一场全新形态的战争：全民战争。在这种全民战争模式下，苏联没有军与民之分，没有前线和后方之分，德军遭遇的每一个人，无论男女老幼，百分百都是敌人；德军身处的每一处土地，无论是旷野还是街巷，都是战场。这种全民战争立刻困住了德军，阻挡住了德军前进的步伐。到1942年1月，在苏联全民参战，全民承受巨大牺牲依然死战不退的情况下，莫斯科会战最终以德军全军覆没而告终。
+
+莫斯科会战之后，德国就一步步走向了败亡。当时6600万德国总人口，青壮男丁的数量大致上也就是2000万左右，而它前后总共动员起1200万正式军人（不计三百万左右的在其占领区征募的外籍军人，含伤亡退役军人），这已经是它的极限了，动员率达到60%的恐怖程度了。就算是这样，它的动员能力也无论如何都不可能强得过实行全民皆兵策略的苏联。苏联当时的总人口1.94亿，算起来青壮男丁大致为6000万左右，苏联在二战时期前后总共动员了超过4000万的正式军人（含伤亡退役军人），动员率甚至达到了67%这样无法想象的程度。
+
+人口规模比不上，动员效率也比不上，德国当然是败局已定。此后德国陆续输掉了斯大林格勒会战和库尔斯克大会战，德军训练有素的重型装甲部队被苏联以惨重的代价消耗一空，被迫转入守势。
+
+雪上加霜的是，1944年6月，美国实施诺曼底登陆，正式打进了欧洲，与苏联从东西两个方向上，共同夹击德国。
+（待续）
+- - -
+在上面那条推文里，我讲述了苏联的社会主义动员模式，抵抗住了德国的进攻，立刻涌入了一大群三观高度扭曲的评论，宣称美国对苏联的援助才是苏联能够击败德军的最关键因素。
+
+行吧，现在乌克兰正在抵抗俄罗斯，欧美各国都在向乌克兰提供巨额军援。那么，到底是谁抵抗了俄罗斯？是谁坚韧不屈流血牺牲？
+
+谁站在了抵抗的最前线，以巨大的牺牲把俄罗斯打得无法存进？
+
+谁才是抵抗俄罗斯的最大功臣？谁才是反抗军事独裁的主角？
+
+把那些评论留一个小时，作为中文圈的三观扭曲的耻辱，展览一下。一个小时后全部拉黑。
+- - -
+破7，记录一下。中国在离岸人民币问题上焦头烂额。庞大的离岸人民币规模，在加上金融衍生品的杠杆交易，整得中国汇率维稳资金狼狈不堪。
+
+我自己粗略估算的结果，仅仅去年，为了守住离岸汇率，至少消耗了三千亿美元。
+
+现在这个趋势看起来，在外汇越来越挣的当下，守住离岸汇率的难度越来越大了。
+
+![破7](/images/20230517002.jpg)
+- - -
+【动员的简史  第三集】
+
+要说美国的动员能力，实在是远远超越了欧式民主国家。二战前美军总人数只有可怜的30万人，完成本土防御任务都有点勉强，但是到二战结束时美国先后动员了1600万人加入军队（含伤亡退役军人）。
+
+当时美国的总人口只有1.3亿，算起来青壮男丁也就是3900万左右，这意味着美国这样的民主国家，动员率都能达到40%。虽然跟苏联与德国这种奇葩没法比，但是跟传统的欧式民主国家比起来，这已经高得吓人了。
+
+并且，美国军队大多还是技术兵种，它几乎是从无到有的组建起了规模庞大的海军部队，在其参战前美国海军总人数（含陆战队）仅14万人，到二战结束时增加到370万人；关于战舰数量，这里只举出航母数量就够了，战前美国海军仅有航母8艘，战争结束时增加到惊人的147艘，这还不算几乎是半卖半送给了英国海军的80多艘航母。而它的敌人日本在巅峰时期也就只有25艘航母，德国甚至只有可怜的1艘。
+
+美国政府能够具备如此强大的动员能力，在其背后有着一个长期的进化过程。在美国1783年建国之初，华盛顿总统是没有任何权力的，基本上就是一个吉祥物般的存在，中央政府连直接的收税权都没有，根本就不掌握任何的经济与政治资源，所有的权力和资源都保留在各州政府手里。一直到华盛顿总统离职前夕，才算是争取到了极低比例的关税分享权，从各州政府手里整合到了一点点资源。就这样的情况，美国经济遭遇任何风吹草动，那都只能等死。这一切的转机发生在林肯时期，由于1861年南北内战的缘故，美国中央政府借着击败南部闹独立的各州、解放奴隶的威势，趁机获取了个人所得税以及消费税的征收权。自此之后，美国中央政府终于算是掌控了一条相对独立的财源。再到1913年，在当时惨烈的银行业危机之下，美国国会通过《联邦储备方案》，建立了由各大财团实际控制的美联储，行使中央银行的职权，结束了此前美国连中央银行都没有的局面，统一了原本分散于各州的货币发行权。
+
+再在一战期间，美国中央政府终于获得了最关键的企业所得税的收取权，加上此前就已获得的个人所得税的收取权，以及在大财团控制下的美联储的货币发行权，在议会层面则逐渐实现了各大财团实际控制多数席位的局面，不再是此前一团散沙的状态。美国中央政府自此完成了资源整合，可以迎接紧随而来的大萧条时代以及二战的终极挑战。
+
+1933年初，富兰克林·德拉诺·罗斯福就任美国总统，面对接近30%的极限失业率的惨烈局面，罗斯福总统果断开启了罗斯福新政，也就是凯恩斯主义的美国版。罗斯福通过美联储大规模发行国债；政府投资大量的基建活动；向各濒临破产的银行提供财政援助；减税；建立系统的社会福利体系等等。这种种做法当然也是为了向底层输入购买力，美国各大财团在此危难期间也坚定的站在了总统这一边，没有给罗斯福唱反调，到1940年，美国已经慢慢的从大萧条中走了出来，失业率下降到了14%。
+
+注意，这个14%的失业率，确实比不上同期德国的零失业率那样震撼人心，毕竟糅合了凯恩斯主义和社会主义的纳粹模式，确实比美国这种单纯的凯恩斯主义要有效率得多。不过美国模式的优点在于可持续。由美联储认购美国国债并发行美元，本质上当然就是由其真正的股东，美国各大财团认购美国国债。而美国各大财团与日韩的财团不一样，美式财团在本质上其实就是千千万万普通美国人资产的管理人角色，这相当于将美元信用与每一个普通的美国人的利益实现了深度绑定。在这种模式之下，只要美国人自己不会集体放弃自己，它的货币就能维持足够的信用，它的政府就具备足够强大的动员能力。
+
+1941年12月日本偷袭珍珠港，美国众议院以388：1的投票结果，授权罗斯福总统正式参战，发起反击，并同时授权罗斯福总统可以发布总动员令，有权根据需要调配战争资源并征募军队。美国的总统授权动员模式自此成型，罗斯福总统因此动员起了强大的军事力量，同时在太平洋和欧洲两线作战，并同时取得了胜利。
+
+1945年4月，在美国与苏联的夹击之下，元首自杀。这是德国的纳粹模式同时挑战苏联的社会主义模式+美国的总统动员模式的结果，德国的败亡因此不可逆转。接下来的历史，就是苏联与美国的长期对抗，当然，也就是社会主义模式与总统授权动员模式的对抗。我们当然已经知道，这场号称“冷战”的对抗，以美国的最终胜利而告终。1991年12月，苏联解体。到了这个时候，美国志得意满，雄视全球独孤求败。在当时，没有任何人能够想到，中国即将带着第四种全新的动员模式，强势崛起。
