--- a/source/_posts/再次禁言（推特：老蛮频道-2023-05-10）.md
+++ b/source/_posts/再次禁言（推特：老蛮频道-2023-05-10）.md
@@ -1,4 +1,4 @@
-title: 再次禁言（推特：老蛮频道 2023.05.10- 2023.05.17）
+title: 再次禁言（推特：老蛮频道 2023.05.10- 2023.05.18）
 author: laoman
 date: 2023-05-15 22:49:46
 tags:
@@ -268,3 +268,87 @@ tags:
 1941年12月日本偷袭珍珠港，美国众议院以388：1的投票结果，授权罗斯福总统正式参战，发起反击，并同时授权罗斯福总统可以发布总动员令，有权根据需要调配战争资源并征募军队。美国的总统授权动员模式自此成型，罗斯福总统因此动员起了强大的军事力量，同时在太平洋和欧洲两线作战，并同时取得了胜利。
 
 1945年4月，在美国与苏联的夹击之下，元首自杀。这是德国的纳粹模式同时挑战苏联的社会主义模式+美国的总统动员模式的结果，德国的败亡因此不可逆转。接下来的历史，就是苏联与美国的长期对抗，当然，也就是社会主义模式与总统授权动员模式的对抗。我们当然已经知道，这场号称“冷战”的对抗，以美国的最终胜利而告终。1991年12月，苏联解体。到了这个时候，美国志得意满，雄视全球独孤求败。在当时，没有任何人能够想到，中国即将带着第四种全新的动员模式，强势崛起。
+- - -
+5.18
+
+【动员简史 第四集】
+
+1949年正式建国后，中国尝试了一段真正的社会主义模式，取消农民的土地产权，并模仿苏联建立农民公社制度。阅读过苏联篇的同学已经知道了，社会主义动员模式仅仅只对工业生产有效，对农业生产无效，甚至还有极大的反效果。这个规律在苏联发生了作用，在中国同样发生了作用。
+
+于是1950年代末期，建国刚刚十年，就爆发了三年大饥荒。这其中最核心的原因，当然在于农民整体上丧失了生产积极性。工业发展方面，除了由上海支援中西部的三线建设以及苏联的技术支援带来的一些零星制造业之外，中国的工业产能迟迟未能发展起来，根本就谈不上实现工业化。1980年中国第二产业（工业+建筑业）从业人数仅7707万，而第一产业（农业）的从业人数高达29122万，工人总数仅仅相当于农民的26.5%。这意味着一直到1980年，中国还是一个纯粹的农业国。在这种一穷二白的基础上，中国被迫改弦更张，放弃了社会主义动员模式，开始探索和建立全新的动员模式。第四类动员模式，自此一步步的建立起来。
+
+具体的改革方式表现为：首先在农业领域开启了二次土改，以“承包经营权”的方式，变相承认了农民对于土地的产权，以此激发起农民的生产热情。而农民需要付出的代价是：要缴纳15.5%的农业税（俗称公粮）；如果农民在满足自己的生存需求之外还有剩余，也必须由国家统一收购，收购价由国家统一制定，标准制定得很低，农民基本上没有利润可言，以此实现对工业的反哺，也就是俗称的工农业剪刀差。对于这样的代价，在今天看来似乎并不公平，然而当时刚刚获得土地产权的农民根本就不在乎，他们迸发出巨大的生产热情。表现在数据上，中国的粮食产量，1979年-1981年都维持在3.2亿吨的水平上，1982年中央一号文明确了家庭联产承包制度后，粮食产量开始迅速增长，1985年3.8亿吨，1990年4.5亿吨，达到了当时技术条件下的极限产能。
+
+各位，这就是在农业领域实施第四类动员的伟大力量。仅仅依靠满足农民对拥有土地的梦想，就能够维持农民的生产热情，鼓舞他们在极低的技术条件之下，依靠手背肩扛，除草积肥，以微弱的人力对抗大自然，就能够达成极限的产能。在整个80-90年代的原始积累期，中国在经济上确实是取得了丰硕的成果，基础教育推进到每一个农村并基本扫除了文盲；东部地区基本完成了路网、电网和水网建设，并大致构筑起了机场、码头等立体交通网络；高等教育与职业技术教育开始恢复，每年输送出数以百万计的职业人才。而这些成绩，统统建立在农民的极限产能之上，也就是建立在二次土改之上。
+
+然而，在整个1980-1990年代，中国在推进工业化的进程中却遭遇了一连串的磨难。1980年代中国虽然在农业领域变相承认了农民对农田的财产权，但是，在城市，在工商业领域，中国坚决不承认市民对生产资料拥有所有权，私有企业也是基本不存在。在当时很有限的开放了外资企业来国内投资建厂，但是也只在沿海的个别城市有屈指可数的几个小厂，连统计意义都没有。整个国家的工业，算是完全控制在国家手中，也就是依然在实施苏联式的计划经济模式。
+
+这里我们必须回忆起前面的内容了：德国由希特勒实施的纳粹动员模式，国家兼并私人的小厂组建起大型的国有企业，是建立在当时德国已经非常强大的工业基础之上，这一点中国根本没法参照。苏联式的计划经济模式倒确实是在一穷二白的农业经济基础上建立起来的，只不过它的第一个五年计划就恰好遭遇到了欧美经济危机，苏联因此获得了整个欧美世界濒临破产的大型企业的倾力支持。欧美世界的鼎力支持，是苏联的社会主义模式能够在农业经济基础之上建立起来的核心原因之一。现在轮到中国开始以计划经济模式开启工业化建设，外部条件首先就跟苏联当时完全不同。并且当时的欧美国家对红色中国也缺乏信任，可口可乐和丰田稍微意思了一下，在中国开了几个小厂，大概也就是这样了，大规模的技术援助与外商投资根本就不可能有。
+
+在这样的情况下，中国在1980-1990年代的所谓工业化建设，也就是大规模的重复建设自己原始落后的生产线。全国2800多个区县，每个县都建一个纺织厂、一个造纸厂、一个电子厂、一个化工厂，是为当时的标准四大建。低水平重复建设的结果，就是生产效率低下，企业与企业之间时不时就爆发各种恶性竞争。而为了避免这种恶性竞争，只能是实施严格的价格管制，实施国家统购统销。而为了维持这种低水平的重复建设以及确保统购统销，中央财政背负着巨大的压力，在无奈之下只能是凭空印钱，于是诱发多次恶性通胀，1985年来了一次，88年来了一次，92-95年又来了一次，一次比一次持续的时间长。其中1994年的消费物价涨幅达到24%，乃是改革开放后通胀最狠的一年。当时普通老百姓的日子，就算达不到水深火热的程度，那也是苦不堪言。在没有外力推动的情况下，计划经济缺乏效率与创新能力的弊病暴露得非常彻底，根本就没有从零开始实现工业化的能力。
+
+（待续）
+- - -
+（动员简史 第五集）
+
+一直到2000年，中国都没能完成工业化，依然是纯粹的农业国。体现在数据线上，第二产业（工业建筑业）的就业人口只有1.62亿，占当年度全国7.21亿总就业人口的比值只有22%。而第一产业（农业）的总就业人口依然高达3.60亿，占比高达50%。
+
+就这样的惨淡情况，当然不可能继续在工商业领域维持社会主义动员模式。到1990年代末期，财政上不堪重负的中国政府终于改弦更张，决定在工商业领域也启动第四类动员：将地方上的小型国有企业或直接关停，或卖给私人；允许私人拥有生产资料，开展工商业活动。标志性的事件，是1997年在刑法上取消投机倒把罪，正式允许私人通过低买高卖挣钱。与此同时，地方上的原本需要国家承担生老病死的全面社会福利的国企工人纷纷下岗，以减轻财政负担。在数据上，1997年刚刚启动下岗潮的时候，国有单位总就业人数为10766万，到2002年下岗潮结束的时候下降到7163万；集体企业的从业人员2817万下降到1122万。两者合计，下岗工人总数达到5298万的规模。
+
+各位，你们必须意识到，5300万的下岗工人，在当时来说，已经是非常惊人的数据了。中国政府甩下了这5千多万工人的福利负担，并且不需要再承担低水平重复建设以及统购统销的财政压力，全身都为之一轻。从此之后，中国政府再也没有背负过类似的福利负担。此后我大中国进一步缩减自身的社会福利负担，具体措施包括：1998年，停止福利分房制度，启动住宅市场化改革；1999年启动教育产业化改革；2004年启动医疗产业化改革。到这个时候，中国式的第四类动员已经完全成型：低福利和严管控之下的财富总动员模式。
+
+这种全新的动员模式与此前的三类动员模式完全不同。无论是德国的纳粹模式、苏联的社会主义模式还是美国的总统动员模式，全都要向国民提供系统的社会福利，覆盖养老、教育、居住、医疗等各方面，以此换取民众的参与热情。唯有中国，在不提供任何福利的情况下，唤起了老百姓的财富欲望。
+
+广大的农民群体基本上没有社会福利可言，没什么养老和医疗福利，到临死前一天都需要劳动，并且长期承受农产品价格剪刀差，有点剩余产品想卖也受到严格管控，只能卖给国家。而他们换来的只是一个权利边界极其模糊的“承包经营权”，算不算一种租赁权在法律上都有争议。然而即便是这样，他们依然能够含辛茹苦汗珠子掉地上摔八瓣的辛勤耕作，保持着农业领域的极限产能。中国在1980-2000年瞎折腾了20年，在工业化建设过程中把社会主义模式走到了绝路，也依然能够维持社会的基本稳定，城市里的老百姓也总能有口饭吃，这就是在农业领域实施第四类动员带来的奇迹。
+
+而在工商业领域，除了少数行业外，在2000年之后大都已经放开，允许老百姓开企业挣钱。同时，中国对老百姓的工商业经营活动予以严厉的管制，行政管控触角深入到企业经营活动的方方面面。工商局、劳动局、街道办、环保局、派出所、税务局、城管、妇联、财局、消防局、质监局……数得出名字的每一个政府部门都有权光明正大的干预企业经营。然而就算是这样，一穷二白的国人依然爆发了巨大的生产热情。民营企业的规模迅速扩大，1997年民营企业的就业人数只有可怜的750万，此后工商业领域的第四类动员开始，到2005年民企就业人数就达到了3458万，2010年6070万，2017年已经达到了13327万，较当年度国有单位6064万的就业人数高出了一倍有余。
+
+更重要的事情在于，2001年中国加入世贸，向全世界公开宣称中国将会遵守世界贸易规范，由此获得了欧美世界的信任，全球的基础制造业也因此逐渐转移到了中国。这些因素的叠加，中国逐渐发展成世界工厂，在服装鞋袜、基础化工以及日用电器领域，中国的生产能力独霸全球，拥有压倒性的出口能力。2002年到2012年，被视为中国经济发展的黄金十年，经济增速长期维持在两位数以上。也就是这十年，让中国人真正摆脱了此前忍饥挨饿的生活，开始富足起来。
+
+总结起来，在实施第四类动员之后，中国政府拥有令全世界其它国家望尘莫及的强大的行政管理体系，权力大得没有边际可言；同时它又没有社会福利负担，手头上掌控的庞大的财政资源可以自由支配，大搞基建也可以，给公务人员加工资也可以。
+
+但是，请注意这个但是，这种低福利+严管控的财富总动员模式，核心在于激发老百姓内心深处的财富欲望。唯有对财富的极度渴望，国人才能长期忍受极低的福利水平以及严苛的行政管控。挣钱多少成为国人衡量人生成败的唯一标准，全社会逐渐形成了赤裸裸的金钱崇拜氛围。
+
+这种财富总动员模式，事实上是一把双刃剑。一方面，它带来了经济的飞速增长；另一方面，它将人性中对财富的渴望放大到了极致，并造成人性的扭曲。这种扭曲的心态，将会在2016年之后，将中国带入真正的债务深渊。而在坠入深渊之后，中国政府开始将严管控这一面做到极致，将第四类动员，扭曲成了面目全非的模样。
+
+ （待续）
+- - -
+我现在正在制作《经济复苏，已经证伪——1-4月份中国经济数据分析》的视频。这样吧，早在今年初我就说过，复苏最多维持到一季度结束，4月份之后，就是全面扑街之势。经济规律就是如此，根本就不可抗拒。在这里我先分享其中的固定资产投资数据给大家，算是热个身。
+
+今年1-3月份固投还有2.3%的绝对值同比增幅（10.73万亿对10.49万亿），但是一到4月份，情况急转直下。4月份当月的固投只有4.02万亿，对应去年4月份的4.87万亿，同比降幅高达17.4%。环比今年3月份的5.37万亿，降幅更是高达25.1%。受此数据暴跌的影响，今年1-4月份的累计固投变成了萎缩3.9%（14.74万亿对15.35万亿）。
+
+要知道去年4月份上海全市被封，各地零零散散同样有很多城市被封，受此影响，去年4月份的固投数据本来就处于极低水平。而今年4月份风调雨顺，没有任何客观上的不利因素，但是固投数据就是出现了如此暴跌。环比和同比都出现暴跌。这只有一个解释：老百姓对于经济复苏的信念，已经整体上坍塌了。
+
+至于国家统计局睁着眼睛说瞎话，绝对值数据摆在这里，依然声称1-4月固投同比增长了4.7%，这是中国式的除法，讲的是政治。我们作为上过小学的新一代，懂得自己除一下，就不要计较了。
+
+![经济复苏了吗？](/images/20230518001.png)
+- - -
+关于美国私人部门的分行业固定资产投资，我给出一组2021年的数据供大家参考。这组数据有助于大家了解美国的产业发展方向：
+
+房地产及租赁，投资额12667亿美元；
+制造业，6023亿美元；
+信息产业，4691亿美元；
+金融保险业，2730亿美元；
+专业、科学及技术服务业，2166亿美元；
+零售业，1479亿美元；
+采矿业，1152亿美元；
+批发业，910亿美元；
+建筑业，848亿美元；
+农业，658亿美元；
+住宿与餐饮业，394亿美元。
+
+总结起来就是，美国依然是以房地产业为绝对优势投资方向的国家。制造业+信息产业+技术服务业，合起来才能比得上美国的房地产业的投资规模。
+
+上一次美国的制造业投资与房地产业投资差距最小的时候，是2008年，当年度美国制造业投资4038亿美元，房地产业投资5914亿美元。这个时候正是金融海啸肆虐，美国房地产遭遇重创，房地产业的投资规模因此剧烈下降。但是此后美国制造业的投资长期没有像样的增长，而房地产业很快就恢复了元气，从金融海啸里走了出来，投资迅速增长，带来今天与其它行业相比的巨大优势。
+
+整体来说，美国要恢复基础制造业，道路还长着呢，至少在投资端，还需要补上此前二十年所欠的功课。
+- - - 
+按我这么多年混网的老规矩，5万粉丝就必须要清一次粉，这个规矩不能丢。
+
+ 1、点菜党请取关。我极其厌恶随意的提问和点菜，知识都是有价的，绝不是你上下嘴皮子一碰，随手打一行字出来提个问，就能获得知识。实在要点菜的，做28个标准引体向上，或者抢到10次沙发。除此之外，点菜党一律拉黑。
+ 
+2、见中国就喷看欧美就赞的无脑一派请取关。中国现在面临的问题很严重，可以说是生死攸关；欧美也并不是人间天堂，极左浪潮让欧美的经济和社会同样苦不堪言。这么多年下来，我批评中国的深度远远超出各位新粉的想象。同样的，就欧美的这点破事，也新鲜不到哪里去。接受不了我对欧美和中国持相同批判态度的，尽早取关，以省去我拉黑的那点小麻烦。
+
+3、左派，即使是温和左派，也请你们取关。我对任何定义上的左，无论是中国的定义还是欧美的定义，都没有任何好感。
+
+4、男生太帅和女生太丑的，请取关。谢谢。
