--- a/source/_posts/再次禁言（推特：老蛮频道-2023-05-10）.md
+++ b/source/_posts/再次禁言（推特：老蛮频道-2023-05-10）.md
@@ -1,4 +1,4 @@
-title: 再次禁言（推特：老蛮频道 2023.05.10- 2023.05.18）
+title: 再次禁言（推特：老蛮频道 2023.05.10- 2023.05.19）
 author: laoman
 date: 2023-05-15 22:49:46
 tags:
@@ -352,3 +352,53 @@ tags:
 3、左派，即使是温和左派，也请你们取关。我对任何定义上的左，无论是中国的定义还是欧美的定义，都没有任何好感。
 
 4、男生太帅和女生太丑的，请取关。谢谢。
+- - -
+5.19
+
+**《动员简史-总结篇.中国部分》**
+
+现在中美对抗已经成为了国际关系的主线。无论其它国家如何选择站队，都必须正视两国之间的越来越激烈的对抗。包括今天开始的G7会议，讨论如何处理与中国关系，都是议程中最重要的问题。而决定中美两国对抗的最终结果的最关键的因素，当然就是两国动员能力的强弱。
+
+中美对抗一直到现在这一刻，都是一场经济战，两国如何调集财政和金融资源；如何维护各自的货币信用；如何鼓舞各自的民众，推动各自的产业发展并从对方手中抢夺产业资源；如何拓宽自己的商路并限制对方的商路。如此种种，都需要动员，并且是一场广泛与深刻的动员。
+
+尤其重要的是，这场对抗发生在全球大萧条即将到来的前夜，我们每一个人都不应该抱有任何侥幸情绪。中美这两个全球第一和第二大的经济体，已经因为此前的种种客观原因，比如中国坚决不履行加入世贸的44条承诺中最关键的22条，让美国火冒三丈，而最终走到了对抗的路上。基于此，我们就必须正视现实，客观的分析中美两国的动员能力的强弱。
+
+中国的动员模式，也就是低福利+严管控的财富动员模式，这种模式存在致命的弊端，它必须做出两个保证：第一，保证向老百姓提供致富的渠道；第二，保证老百姓的财富不缩水，资产不贬值。2012年之后制造业不再是挣钱的好路数，怎么办？于是2013年因为银行表外资产失控而导致钱荒，2015年因为国家强行推涨股市而导致股灾。这两件灾难性事件背后的根本原因，就在于中国政府必须向老百姓提供致富渠道。这两条路都走不通，怎么办？
+
+于是2016年，房地产领域的“涨价去库存”政策横空出世，财政、金融、行政三管齐下，以举国之力，强行扭转当时已经下行的房地产市场。老百姓的财富欲望由此剧烈放大，全民贷款炒房。也就是从2016年开始，城镇居民收支结余（可支配收入-消费性支出，也就是城镇居民为了维持生存所必须的支出）的九成以上，都会拿去买房，付首付和按揭款。城镇居民因此逐渐丧失了消费能力，也就是从2017年开始，汽车和手机的销售数据都开始大幅下滑。这场房地产的泡沫盛宴一直维持到2022年，轰然破灭。中国百强房地产商，有40余家债务实质性违约。2023年中国走出三年清零政策，老百姓寄望于还能有一波房价上涨。然而现实非常残酷， 4月份的商品房销售规模较3月份直接腰斩。
+
+这事实上就意味着一件事：中国政府从此不再具备财富总动员的能力了，它已经无法履行自己的两个保证了。而吊诡的事情就在于，无论中国政府是有意还是无意，中国在动员模式之外，选择了另外一条截然相反的路：抑制模式。
+
+抑制模式的开端是2016年初，以整顿媒体为标志。2018年3月设立中央网信办，并全面整顿各类信息平台，从此中国国内精彩纷呈的网络世界逐渐沉寂。2020-2022年三年清零，权力大幅下沉到基层组织，社区干部们经过了多轮演练，并最终实现了社区化、模块化的抑制能力。到现在这一刻，只要中国政府愿意，可以在一个小时之内实现对任意社区的标准化封锁。
+
+各位，社会抑制与社会动员，是截然相反的能力。动员需要鼓动老百姓积极主动的解决问题，克服技术上管理上的种种困难，从而创造财富。而抑制不需要。抑制只需要把老百姓死死的摁住，不出现乱子。有任何风吹草动，立刻消灭掉。这就足够了。既然已经具备了这种强大的社会抑制能力，那么相关各方有事没事就会刷刷存在感，所以脱口秀这种一看就不安分的演出形式，立刻就撞到了枪口上，这几天笑果文化被整得死去活来。这就是背景。
+
+就现在这种强大且精准的社会抑制能力，此前在中国社会根本就没有出现过，至于欧美世界，对此更是闻所未闻，连想都想象不到。对中国政府来说，反正动员已经彻底无望，那就彻底放弃掉。在接下来的中美对抗之中，中国政府可以依靠的，也就是这一手抑制能力。
+
+在抑制之下，中国由此丧失了主动进攻的能力。比如说，中国不可能再实现科技上的任何重大突破，因此无法再对美国的现有科技体系形成任何威胁。并且，在抑制之下，中国现有的产业和资金都会加速外逃，由此让失业情况更加恶化，加快大萧条的到来。
+
+但是至少，中国仅仅依靠这一手抑制能力，就可以在表面上实现稳定，让社会矛盾不至于集中性的大规模爆发。接下来中国一定会进一步钳制言论和肃清网络。小规模的社会冲突此后会此起彼伏，没关系，封杀消息，拖着就是了。只要可以拖，只要中国人民愤怒的力量不超过抑制的力度，一直拖到大萧条在全球爆发，拖到欧美的内部矛盾爆发，说不定就有了反击和绝处逢生的机会。
+
+不管中国政府此前是有意还是无意（我其实认为这是无意中达成的效果），至少到现在这一刻，社会抑制，已经是中国打出来的明牌了。
+
+而欧美方面呢？做好准备了吗？注意，欧式的泛民主动员模式，没有任何应对大萧条和战争的动员能力，这是被历史一再证明过的事实。整个欧美世界，如果不是把希望寄托在中国人民的愤怒大爆发基础之上的话，那么唯一可以指望的，就是美国。
+
+**《动员简史-总结篇.美国部分》**
+
+美国的“总统授权动员模式”，前提在于“授权”，也就是美国两院必须对总统给予动员的授权。上一次的授权，在冷战结束之后已经结束了，此后美国总统的权限越来越小。作为联邦制国家，实际的治理权归属各州，联邦总统如无授权，在国内事务上的权限其实非常小。
+
+1991年苏联解体后，美国也不再需要一名强势总统。从此之后，美国无法推动全国性的基础设施建设，高铁这种东西需要全国动员的项目，根本就搞不起来。重启制造业实现“再工业化”这件事，奥巴马就开始喊，特朗普实际推动了一下，但是一直到拜登任上，成效实在有限。根据美国国家经济分析局的数据，奥巴马上任之前的2008年，美国私人部门的制造业投资4038亿，到2021年也就是6023亿。这种投资增幅勉强也就是个通胀水平，让美国现有的工业水平不至于倒退得太厉害，仅此而已。根据美国商务部的数据，2008年3月份美国制造业出货量（除军工外）4603亿，到2023年3月，也就是5581亿美元，考虑到通胀的存在，这种生产数据事实上意味着美国再工业化努力的失败。
+
+美国3亿多的人口，也没有少到仅仅依靠金融服务和房地产业就足以让全国人口吃香喝辣的程度。不能实现再工业化，美国的底层人口的收入情况始终都无法改善。奥巴马上任前的2008年，美国家庭年收入5等分的结果，从低到高分别为：1.2万美元，3.0万美元，5.1万美元，8.2万美元和最高档的18.2万美元。十一年之后的2019年，分别为1.5万美元，4.1万美元，6.9万美元，11.1万美元和最高档的25.4万美元。注意，这是家庭年收入。这一数据意味着，第4和第5档的高端家庭收入快速增长，而第1-3档的广泛的底层人群，在这十年里面，在收入方面几乎没有增长性。富者愈富，而高达六成人口的底层人口收入长期没有增长性，并且看不到任何改善希望，这必然会导致社会思潮的动荡。
+
+2020年弗洛伊德案爆发，这就是美国陷入高度撕裂状态的标志。自此之后，撕裂，就成为了美国社会的核心特征。不仅是美国普通民众左右撕裂，美式财团同样也是高度撕裂，支持共和党的工业大财团与支持民主党的华尔街大财团之间剑拔弩张，相互之间恨不得就开打金融战。撕裂成这样的状态，美国国会连国债上限方案都极难谈拢，更不要说授权总统进行总动员了，连门都没有。
+
+事实上，无论美国的左和右，有任何一方能够结束美国的撕裂状态，获得议会的授权，都可以发起有效动员。然而要结束撕裂，就必须切实改变美国的产业结构，缩小贫富差距，给予社会最广泛的底层人群以收入增长的机会，这种事情本身就需要进行深刻的动员，本身就需要授权。这就是一个悖论。特朗普在任上，任何重大措施不可能得到民主党人的支持。同样的，拜登在任上，共和党人也绝不会同意他的任何改革。
+
+撕裂的状态不能弥合，连最基础的动员授权都无法获取，又怎么能够对中国发起主动的经济战？不能主动进攻，难道就指望中国人民的愤怒冲破抑制，引发中国国内的大动荡？美国只能如此被动等待的吗？？
+
+即便对中国那边可以就这么等着，美国又怎么应对扑面而来的大萧条呢？怎么采取灵活机动的金融和财政措施呢？中国人在大萧条中可以被抑制住，美国人可是不会消停的。到时候美国联邦政府连最基础的权力都没有，任何人财物资源都没有，可以怎么应对萧条？
+
+当然了，在美国历史上，每一次遇到真正的危机的时候，总是能够众志成城，两党总是可以放下成见达成共识。希望这一次，美国同样也能做到吧。
+
+（全文完）
