--- a/source/_posts/归来（微博：老蛮频道-2023-05-21-2023-05-22）.md
+++ b/source/_posts/归来（微博：老蛮频道-2023-05-21-2023-05-22）.md
@@ -1,4 +1,4 @@
-title: 归来（微博：老蛮频道 2023.05.22）
+title: 归来（微博：老蛮频道 2023.05.22-2023.05.25）
 author: laoman
 date: 2023-05-23 05:59:23
 tags:
@@ -101,3 +101,47 @@ tags:
 ![外汇数据](/images/20230523002.jpg)
 
 ![外汇数据](/images/20230523003.jpg)
+- - -
+5.23
+
+对中国现在的企业主来说，现在有一个无法克服的麻烦，就是无法做中长期规划了。原因不解释。
+
+无法做中长期规划，就会放弃中长期投资，日常修修补补，撑死了就是维持眼前的规模，已经是最科学合理的经营对策了。
+
+而这，就是萧条的起因。 
+- - -
+我今天算是梳理了一整天的出口数据，目前眼已瞎，不过成果十分丰硕，我这里简单分享其中的一组数据给各位。各位注意控制一下情绪，不要骂得太难听。
+
+这样，今年以来我国纺织品及服装出口企业的日子十分艰难，收入普遍大跌，可以说是困难重重，眼看着就要活不下去了，一上网就可以看到这些企业主的痛哭声。但是，根据海关数据，今年1-4月份，纺织服装服饰出口总规模为941.4亿美元，对比去年同期的970.3亿美元，仅仅只微跌了2.97%。如果是这样的话，各企业还哭个啥啊，这已经相当了不起了好吧。
+
+但是，在海关发布其以报关为统计口径的数据的同时，国家统计局同样也会发布其由规模以上出口企业逐级上报为口径的数据。在这里，我们将会看到一组令人震惊的数据，我截图如下。2022年1-4月，统计局口径的纺织服装出口规模为939亿，与海关口径的数据基本一致。然而到今年1-4月份，下降到782亿，降幅高达16.72%。
+
+这，大概就是真实的服装企业的出口降幅了。
+
+![出口](/images/20230525001.jpg)
+- - -
+5.24
+
+我这两天就可以把《经济复苏，已经证伪》的视频搞出来，还是只发V区。给一个概述吧：我从来没见过这种投资、出口、房地产、社会债务联合崩塌的景象，可以说是非常吓人了。
+
+各位如果不打算润出去，那真的是要做好在经济萧条的背景下，被大抑制治理模式死死的摁在底层互害的社会里，长期挣扎的准备了。
+- - -
+美国大选从现在的总统候选人之争开始就很好玩了，很多热闹可以看。共和党是徳桑迪斯和特朗普之争；民主党没有悬念，虽然跳出来参选的不少，最终候选人基本就是在任总统拜登了。
+
+徳桑迪斯是改良版的特朗普，都有右派的保守理念和人气，德桑相对特朗普又有成熟的政治手腕和看人用人的眼光。特朗普的政治手腕堪称幼稚，莫名其妙的与共和党建制派和欧洲政坛为敌，搞出私人恩怨来，都是毫无必要的。看人用人方面更是一塌糊涂，管人的能力连中国的村长都比不上。
+
+不是说政治手腕和管人的本事，就代表了治国理政的水平，但这是领袖人物必备的素质，可以不强，但绝不能烂到特朗普的这种程度。
+
+接下来特朗普一定会疯狂攻击徳桑迪斯，而徳桑迪斯很确定将会以推特作为舆论主战场。推特可以热闹起来了。嘿嘿，作为中国人我看这场热闹也看得挺开心的。
+- - -
+5.25
+
+到现在这一刻，所谓经济复苏，已经被证伪，我现在也在制作总结性的视频，这个问题应该没有任何疑问了。
+
+现在的问题是，既然复苏已经被证伪，萧条就在眼前，中国可有什么对策？或者问题甚至可以这么问，顶层是不是被统计部门一顿忽悠，反过来认为经济处于过热状态，还打算给经济降降温，让萧条来的更凉一点呢？
+- - -
+关于中国应对萧条的方法，我反复的说过，经济政策本身已经没有任何用处。
+
+中国现在唯一的办法，就是在政治方面，启动有限改革。大的动作都不需要，有限的几条就够了。
+
+比如，取消户籍制度，取消央企的垄断待遇。我们在政治改革上的欠账太多了，稍微补上几条，就可以再次激发中国人的工作和生活热情，推动经济继续高速发展十年，一点问题都没有。
