--- a/source/_posts/归来（微博：老蛮频道-2023-05-21-2023-05-22）.md
+++ b/source/_posts/归来（微博：老蛮频道-2023-05-21-2023-05-22）.md
@@ -145,3 +145,25 @@ tags:
 中国现在唯一的办法，就是在政治方面，启动有限改革。大的动作都不需要，有限的几条就够了。
 
 比如，取消户籍制度，取消央企的垄断待遇。我们在政治改革上的欠账太多了，稍微补上几条，就可以再次激发中国人的工作和生活热情，推动经济继续高速发展十年，一点问题都没有。
+- - -
+说个常识。
+
+现在欧美各国对我国的投资移民的路子快堵死了，但是工作移民的路子非常宽。哪怕你啥也不会，就工签过去从语言学起，学语言的同时随便考个水电工护理工资格，能考及格就行。
+
+以中国人考试能力来说，考一次不成考两次，半年内总能考过。考来考去反正就那几套重复的题罢了。
+
+中国人，但凡能考得上一个最烂的大专院校的，都可以走这条路，非常容易，如果愿意工签去日本新西兰之类劳动力急缺的国家，更加容易。简直是易如反掌。
+
+欧美不卷，也没有年龄歧视，四十多岁出去都算年轻人，找水电工维修工护理工剪草工幼教装修工等等这类基础技术工作没任何问题，过它们的资格考试也非常简单。升迁固然不容易，但收入不低，五六万美元的年收入随便就干到了，平安干到退休更没什么问题。
+
+非要去欧美躺着享受英式管家服侍的富贵生活的，当我没说。
+- - -
+刚刚那条通过工签润出去的微博，现在评论三百多条了。结论非常明确：绝大多数人不会为了润出去采取任何行动。就算如此清晰告诉他们现在去欧美做基础技术工作非常容易，愿意采取行动的人也非常稀少。
+
+理由很多：没有中介手把手的指引，年龄大了，家人不支持，没学过技术，外语不好。还有的坚决不信工签这条路，哪怕有几个案例现身说法了，他们也不信。
+
+而这些理由，都是自己给自己找的借口罢了。
+
+所以，作为十万真粉的大V，我今天做了两场民意测试的结果：中国人，一没有改变社会的勇气，二没有改变自己的勇气。这两个结论都是成立的。
+
+不知道V区的各位，看到我今天的结论，有什么感想呢。
