--- a/source/_posts/房价暴涨之后（微博：老蛮频道-2023-05-26）.md
+++ b/source/_posts/房价暴涨之后（微博：老蛮频道-2023-05-26）.md
@@ -1,4 +1,4 @@
-title: 房价暴涨之后（微博：老蛮频道 2023.05.26-2023.05.29）
+title: 房价暴涨之后（微博：老蛮频道 2023.05.26-2023.05.31）
 author: laoman
 date: 2023-05-26 22:50:27
 tags:
@@ -132,3 +132,47 @@ tags:
 承认吧，我国承担不起美国于1980年代初向全世界输出美元和制造产业的那种角色。 
 - - - 
 熟悉我的老粉都知道，每次我搞完一篇硬货，就会有一段短暂的不应期。现在就是不应期。
+- - -
+5.30
+
+发个大招，美国联邦历年财政收支、赤字及联邦债务追踪。规律也算比较清晰了。
+
+注意以下几点：第一，美国国债的剧烈上升期，源于里根总统的改革，向全世界发行美债，推动星球大战计划并带来了信息技术革命；同时向全世界输出美元和基础制造业。
+
+这是历史性的改变，美国以国债为基础向全世界输出购买力，人类之所以能够在1980年代至今没有经历过一次像样的经济危机，其原因就在于此。
+
+第二，2016-2019年间，美国真的尝试过压制联邦债务增长。
+
+第三，2020年的新冠以及随后的拜登政府的大肆挥霍政策，再次将联邦债务带入了暴涨时代。当然这一次的钱没有花到境外，主要还是花到了美国人自己身上，并带来了严峻的通胀问题。
+
+第四，就目前而言，美国的联邦债务剧烈膨胀问题没有任何解决办法。2021财年美联邦财政利息支出了3520亿，2022年暴增到4750亿。在美联储应对通胀不断加息的背景下，2023年美联邦政府的利息支出可能超过7000亿。联邦财政收入根本覆盖不了这种级别的利息支出，也就是连利息都必须借新还旧，这就是传说中的滚雪球效应了。
+
+第五，美国联邦债务的借新还旧，本质上其实就是美联储发钱，也就是货币供应量将会继续膨胀，从而进一步加剧通胀。
+
+总结：2020-2022年美国联邦财政的骚操作，基本上把美国国债带入了不可解决的地步。联邦债务三年暴增7万亿美元，带来的后果根本就是无解。如果一定要解，那就是吞噬和消化一个类似中国这么大体量的经济体吧。也就是说，在中国这边，经济上遇到的死结化解不了，美国这边同样化解不了。两边唯一的选择，都只剩下吞噬和消化对方。说完了。
+- - -
+经过我这些天孜孜不倦的科普，想必大家都有了基础概念：中国和美国经济，都走到了各自模式的尽头，往前一步都走不下去，而在现模式下，对方就是自己的最大敌人：中国亟需的新产业和新投资，美国也迫切需要，并且在购买力剧烈萎缩的当下，也不可能做到共同发展了。
+
+所以，不要有任何幻想了。中美关系绝无和解的可能性，只能是坚定的脱钩。作为在中美友谊天长地久的官方宣传下长大的中国人，我们要学会面对一个充满敌意的美国了。
+- - -
+老实说我也很好奇，马斯克能得到什么。中美对抗是既成事实，马斯克如扩大在华投资，他回国能被喷死。如果他不扩大投资，能得到什么？特斯拉中国厂交的税返还给他？或在其它领域，比如在星舰计划上与中国展开合作？那马斯克会被喷得更惨。总之是个风向标吧，保持观察。
+- - -
+5.31
+
+说一下我对运用官方数据的几个原则：
+
+1、各部门一定会修饰数据。但是它们每年都会修饰，都是同一批人修饰，一代代的科长传承修饰技巧，修饰方式和幅度大同小异。所以数据的绝对值未必可信，但数据与数据进行比较，计算同比和环比的趋势相对可信。
+
+2、如果数据部门突然调整往年的基数，不要理睬它们的调整动作，继续使用原数据。
+
+3、趋势上如果出现弱化和萎缩，出现负值，则更加可信。这是连修饰都无法掩饰的经济恶化现象。
+
+4、同比环比百分比这类趋势数据，一定要自己亲自除一下。
+
+5、如果同一类数据有不同的部门进行统计，每个部门的数据都要看，以趋势最差的部门的数据最准。
+- - -
+这样，四月份经济数据已经处于多器官同时衰竭状态，但是一直到现在这一刻，没看到任何对应的休养生息措施，恰恰相反，顶层还在打强心针，吃兴奋剂，意图强行再硬一把。
+
+今天是五月份的最后一天，萧条其实已经肉眼可见，甚至都不需要数据证明了。
+
+五月份的数据，到六月中旬也就陆续出来了。到时候大家再来看，情况恶化到什么程度了吧。到这一刻，数据的作用不再是论证萧条即将到来，而是，我们已经在深渊里下坠了多深。
