--- a/source/_posts/产业升级（微博：老蛮频道-2023-06-01）.md
+++ b/source/_posts/产业升级（微博：老蛮频道-2023-06-01）.md
@@ -64,3 +64,63 @@ tags:
 - - -
 这就是我这两天集中阐述的问题。人为的产业升级措施，并没有产生积极作用。一定要说的话，唯一的作用就是腾出了土地搞房地产。然而房地产也没有好好搞，地产商根本不追求宜居性产品，依然是傻大黑粗得过且过那一套罢了。
 - - -
+说一下白酒。白酒行业的兴旺程度大致与高端商务活动的密度正相关。
+
+2016年是全国白酒产量的峰值，1358万吨。此后就进入了快速下降通道，到2019年下降到786万吨。没关系，我们把2019年的数据当成基数来看。
+
+2020年741万吨；
+
+2021年716万吨；
+
+2022年671万吨。
+这三年的情况特殊，或许是某些政策导致了商务活动不够频密。也PASS掉。
+
+2023年1-4月的产量158万吨，同比2022年同期的261万吨，降幅39.5%，几乎算是一次腰斩。按这个趋势计算，白酒行业一年的销量不足500万吨，跟2016年的峰值年份相比，就是脚踝斩了。
+
+总之，要么就承认今年老百姓的消费观念剧烈转变，白酒根本没人喝了，导致今年白酒业的腰斩式下降。要么就承认今年商务宴请根本就没发展起来，所谓餐饮业的火爆，都是年轻人喜欢的快消型餐饮罢了。在餐饮业而言，一顿商务宴请，比10顿麻辣火锅挣得钱还多啊同学们。
+- - -
+一个很有意思的现象是，美国现在不停的对中国隔空喊话，希望可以直接交流，从商务部到国务卿，再到昨天的拜登公开演说，都在呼吁展开中美直接对话。
+
+但是中国方面一直不接这个岔，理由是美国方面不够尊重中国，提了一些无理要求之类，反正总归不接受对话要求。
+不管谁是谁非吧，这个现象其实就意味着一件事：两边其实已经没有可供深入交流信息的渠道了。即使在美苏冷战时期，两边都没发展到断绝交流渠道的地步。
+- - -
+6.3
+
+美台于去年6月启动《21世纪贸易倡议》谈判，到昨天六月1号，双方在首批五项议题上达成一致，并在华盛顿完成了首批协议签署。
+
+该首批协定包括的五项议题为：关务行政及贸易便捷化、良好法制作业、服务业国内规章、反贪腐及中小企业。剩余留待后续谈判的七项议题包括劳动、环境、农业、数位贸易、标准、国营事业，以及非市场政策与做法。整个协议的出发点是市场公平竞争、资讯透明化、降低企业交易成本。
+
+公平、透明、低交易成本，已经成为美国主导的新的贸易模式的基本特征。至此美国已经完成与加拿大、墨西哥、日本的新贸易协定的签署，与台湾和欧洲都签了一半。
+
+去中国化的全球贸易新规则，距离最终达成，又前进了一步。
+
+中国方面对美台之间达成的该协议成果提出了严正抗议，要求美方立即停止推进并立即撤销所谓‘倡议’和‘协议’，停止向分裂势力发出任何错误信号”，否则由此造成的后果必须完全由美方承担。
+- - -
+讲完了制造业、房地产业的精细化，今天我们来讲述中国服务业的精细化方向。首先从餐饮业说起。中式菜肴为何不能建立数字化标准？菜谱里的“少许盐”、“适量油”、“慢火”等模糊性表达，将其精准数据化到底有多难？流行全国的川湘菜，所谓“微辣”“中辣”这类含糊不清的表达，转为使用SHU标准辣度到底有多难？对餐厅进货的每一种辣椒的标准辣度进行简单评测，到底有多难？一直抗拒对中餐进行数据标准化的原因到底在哪里？辣椒炒肉，半斤肉配多少标准辣度的辣椒，加多少油加多少盐，避免油脂和食盐超标（这已经是中国式饮食的最大健康威胁），如此标准化数据化，到底有多难？
+做到这一点之后，高档中餐厅负责点菜的主管，应该了解每一种菜的做法数据及主要配料数据。
+
+物业服务公司应该提供标准化的住户家庭给排水系统及电路维修服务。可以收费，但收费应标准化。
+
+三星级及以上酒店应该提供衣服自助洗涤设施。
+
+的士司机（包括网约车司机）应该对城市道路和标志性建筑物有基本了解，不能完全依靠导航。
+
+各行各业，在精细化道路上可提升的空间，大得难以想象。这，就是真正的产业升级。做到了这些，或者哪怕做不到，只是往这个方向努力，中国经济继续高速发展十年，一点问题都没有。
+- - -
+最近太浪了搞忘了，中与某之间的脱钩问题是不能公开谈的[哼]。
+
+好吧我们谈点别的呗。
+
+今年1-4月我国进口农产品800亿美元，同比增长11.2%，其中大豆进口量200亿美元，同比增长12.5%。
+
+而与此同时，原油进口量1047亿美元，同比下降11.6%。集成电路进口量1056亿美元，同比下降25.6%。
+
+如此此消彼长，或许不用多久，我国的农产品进口量就会超越原油和集成电路，成为进口量最大的品类了。
+- - - 
+换个写法吧。
+
+2019年之前，中美互为最大贸易伙伴，双方之间的商务交流活动十分频繁，每年大陆与美国之间的直飞航班往返旅客达到830万人次，平均每周15.9万人次。
+
+现在这一刻，大陆与美国每周直飞往返就7000人次。
+
+我个人不知道现在这个体量如何满足中美之间的商务交流需求。
