--- a/source/_posts/产业升级（微博：老蛮频道-2023-06-01）.md
+++ b/source/_posts/产业升级（微博：老蛮频道-2023-06-01）.md
@@ -1,4 +1,4 @@
-title: 产业升级（微博：老蛮频道 2023.06.01-2023.06.02）
+title: 产业升级（微博：老蛮频道 2023.06.01-2023.06.04）
 author: laoman
 date: 2023-06-02 13:33:03
 tags:
@@ -124,3 +124,20 @@ tags:
 现在这一刻，大陆与美国每周直飞往返就7000人次。
 
 我个人不知道现在这个体量如何满足中美之间的商务交流需求。
+- - -
+6.4
+
+气氛已经烘托到了今年内不梧桐台湾都会被全世界骂你是个嘴炮大国的程度了。
+- - -
+感慨一下，即使是去年，对外关系已经不太好了，也没有像今年这样，拒绝与美国直接交流，面对G7态度温和的宣言依然强硬的表达反对和愤怒，对日韩印台丝毫不假辞色，时不时就去查抄外资企业，在各种国际场合不加掩饰的发表充满战斗欲望的讲话。
+
+然而另一方面，又大规模扩大了招商引资的力度，频繁召开各种招商活动，对外资落地的补贴力度到了难以想象的高度。
+
+整体来说就是，欢迎老外过来帮我大中国挣外汇，但是意识形态和政治生态是绝对禁区，稍有触及就要被我整趴下。并且这两个禁区的边界还很模糊，解释权归“有关部门”，连这个有关部门到底是谁都很模糊。
+
+就这样的搞法，能吸引到外资就是奇迹了。即使此前没有下定决心要撤的外资，现在大概都已经尿了。
+- - -
+这样，印度虽然在鹅乌之间采取中立态度，但是它在石油交易问题上给鹅挖的这个“使用卢比交易”的坑，毫无疑问是早有预谋，借中立的名义坑鹅去的。这件事持续到现在，鹅手里拿着一堆印度卢比，已经哭了很久了，真的完全就是垃圾啊。 所以全世界没有任何国家谴责印度资助了鹅。
+
+@一财网
+俄罗斯遭遇“卢比陷阱”，和印度谈判陷僵局。
