--- a/source/_posts/产业升级（微博：老蛮频道-2023-06-01）.md
+++ b/source/_posts/产业升级（微博：老蛮频道-2023-06-01）.md
@@ -1,4 +1,4 @@
-title: 产业升级（微博：老蛮频道 2023.06.01-2023.06.04）
+title: 产业升级（微博：老蛮频道 2023.06.01-2023.06.07）
 author: laoman
 date: 2023-06-02 13:33:03
 tags:
@@ -141,3 +141,35 @@ tags:
 
 @一财网
 俄罗斯遭遇“卢比陷阱”，和印度谈判陷僵局。
+- - -
+6.5
+
+抖音上直播的这场以色列对中东各国的全面战争，历经两个多月，已经进展到以色列被全面包围，即将弹尽粮绝的程度了。
+
+每个视频都有十几万点赞你们信不信？这就是中国底层的人数最为广泛的县乡人民的基本素养，也算是一场大型社会学试验了。
+
+事实上，这也就是中国社会面的基本盘，充满着各种矛盾面的基本盘。唯有深刻理解他们，才能理解这个国家的未来。
+- - -
+除了这一场虚构的中东战争外，现在整个抖音乃至是微博的视频区，最热闹的内容就是美国登月造假，不过还没吵出结果来，正反两派目前达成的共识是：美国佬当年登月的关键技术现在肯定是达不到了，技术退步了。等吵出结果了我再向各位汇报。
+- - - 
+向V区的朋友们强调一次，立刻把存款从小型城商行和农商行提走，挪到大行去，不要再等了。银行圈从去年开始，过于依赖小微企业贷款，坏账率猛烈提升。今年一季度四分之三的贷款都进入了小微企业，这意味着小银行的大面积亏损潮必然会爆发。再结合地产公司债和地方债暴雷的问题，小银行绝对过不下去了。 
+
+![农商行](/images/20230607001.jpg)
+- - -
+一方面，决定最底层的县乡居民生死的金融风暴已经发作，但是不能公开讲述，一说就是煽动金融恐慌，恨不得属于刑事犯罪。另一方面又在向这些底层居民输出各种扯淡到别致的玄幻新闻，让他们活在一个虚假的世界里。不知道当他们被现实锤醒的时候，会酿出什么样的悲剧啊。 
+- - -
+6.6
+
+之前就说了，我对2023年的经济判断有两个基本指标：每个月的城投债净融资额和银行结售汇差值，如果同时转为负值，那么从那个月开始，经济就正式扑街了，并会带来无法控制的连锁反应。
+
+前面4个月都没有同时为负的情况。银行结售汇差值一会儿正一会儿负，城投债净融资额倒是一直维持正值。
+
+现在城投债5月份的数据出来了，净融资额-432亿。并且就目前城投债四处暴雷的情况来看，以后转正的可能性也不大。所以，这两个月度数据同时为负，已经是必然会发生的事情了。
+- - -
+6.7
+
+鹅军已经沦落到需要靠大坝决堤才能阻挡乌军攻势的地步。这种阻拦一定不可能长期有效，并且反过来，它还会对鹅军士气产生致命的负面作用，每一个一线的鹅军士兵都会清晰的意识到，正面对战打不过了，只能依靠这种歪门邪道了。
+
+所以蒋介石1938年6月决堤黄河，只是阻拦了日军个把月的时间，之后就迅速的丢掉了河南，紧接着丢了湖北，整个中国的腹地，全都被日本人占领。1938年12月，汪精卫深信绝不可能胜利，于是叛国。这都是决堤黄河的负面作用。 
+
+这么说吧，按历史传统的话，俄罗斯内部很快就会出一个汪精卫了。
