--- a/source/_posts/禁言82天之后（推特号：老蛮频道-2023-06-08）.md
+++ b/source/_posts/禁言82天之后（推特号：老蛮频道-2023-06-08）.md
@@ -1,4 +1,4 @@
-title: 禁言82天之后（推特号：老蛮频道 2023.06.08）
+title: 禁言82天之后（推特号：老蛮频道 2023.06.08 - 2023.06.12）
 author: laoman
 date: 2023-06-09 06:40:05
 tags:
@@ -30,3 +30,72 @@ tags:
 这大概就是年初选择停留在香港观望的资金，在经过前面四个月的观察之后，发现中国经济并没有复苏迹象，于是开始走了。
 
 ![香港外汇](/images/20230609001.png)
+- - - 
+6.9
+
+为什么“城投债净融资”是观察中国当下经济的非常好的指标呢？
+
+地方政府的公开债务主要成两类：由省财政厅统一发行的地方债，以及由地方平台公司自主发行的城投债券。城投债券的管理相对地方债来说十分松散，也可以随便挪用，不讲究专款专用。因此城投债乃是地方政府的神器，化解财政压力的终极手段。
+
+各位必须要知道的是，现在整体上政府债务都靠借新还旧，指望财政自己掏钱出来还本，是不可能的。无论正规的地方债还是不太正规的城投债，在以往的年份，发行总量的七成左右都是还旧债的。正规的地方债还好，不太担心发行问题，毕竟是省财政厅统一发行。城投债很容易就出现信心不足问题，认购量一旦不足，发行受阻，分分钟就融不到足够的钱来偿还旧债。体现在数据上，就是净融资额为负。
+
+这个时候，就需要地方政府从自己口袋里掏钱还债，这是绝对掏不出来的。这个时候，地方债风暴就发作了。
+- - -
+6.10
+
+俄乌战场终于进入了炮火连天的激战模式。在俄罗斯炸掉大坝淹掉了南部战线之后，兵力严重不足的俄军只需要防御东部和东北部战线，可算是大大的松了一口气。
+
+两边现在打得十分焦灼，可以说是终于从一战水平，提升到了二战初期的水平，低机械化的步兵部队搭配炮兵部队，在漫长的战线上你攻我防。
+
+目前的情况还处于拉锯状态，启动反攻至今也就是个把星期，乌军作为进攻方，还没有取得明显的战略层面的优势，在若干突击部位取得几个进攻点，还不足以称之为摧枯拉朽的胜利。俄罗斯军队不需要再防御克里米亚方向，短时间内压力大减，也没有在乌军的攻势下瞬间崩溃。
+
+从现在的架势来看，大概一个月内，这一波反击战就能打出结果了，拖不了特别久。乌克兰现在的战略优势在于，它可以一波又一波的发起反击。而俄罗斯的家底，大概这一波下来，就会被消耗光了，也是比较惨的事。这也是战事一旦启动，就拖不长的原因--俄罗斯的后勤真背不动。
+- - -
+6.11
+
+我一直很难理解中国人对俄罗斯的感情。即便是中国的社会主义革命起源于苏联，有所谓感情加分，现在的俄罗斯也与苏联没有一毛钱关系，俄罗斯甚至花费了巨大的人力物力财力来清除苏联的遗产。至于说没有了俄罗斯在前面顶着，欧美世界就会把中国视为第一对手，更是无稽之谈。俄罗斯在发起战争之前整个欧美世界就没人把它当对手，纯粹当成廉价能源提供商罢了，在国际经济和政治圈里没有存在感已经超过十年了，整个国家的经济体量也就跟中国江苏差不多，属于无人理睬的主。
+
+至于中国现在跟欧美的关系，那是另一个层面的问题，跟早已衰败的俄罗斯没有一毛钱关系。无论有没有俄罗斯，中国跟欧美的关系都会按既定逻辑走下去--全球债务体系剧烈扩张，最终导致基于世贸体系的扶持中国的规则无法维持，而中国长期拒绝履行世贸承诺的表现将会引发欧美世界巨大的愤怒。俄罗斯这种微弱体量的辣鸡，哪怕在十年前就被弄死了，也不影响后续中国跟欧美之间的关系演变过程。
+- - -
+无论统计局、海关和外汇管理局今年在出口数据方面如何打架，有两个数据是绝对不会说谎的：航运价格指数和海员薪酬指数。这两个数据都是上海航运交易所发布的，只对向下企业负责，不需要考虑什么政治因素，一旦数据作假，影响它的会员单位的业务，那是当场就会翻脸，所以它的数据一定是真实的。
+
+今年以来的出口航运（图一）价格一路降得让船东们痛不欲生，并且大幅下调了海员的薪酬（图二）。请问出口必须呈现什么样的情况，才会同时有图一和图二的情况发生？
+
+![](/images/20230612001.jpg)
+
+![](/images/20230612002.jpg)
+- - -
+新鲜热辣的数据，民政部在刚刚终于更新了2022年的结婚人数四季度季报数据，全年累积下来结婚人数低得令人难以置信，只剩下683万对（包含了初婚及再婚）。比2021年低了10.6%。离婚数据还没公布，还需要等待年报数据，我这里还没更新进表格。初婚人数也没有公布，需要等待年报数据，但是必定低于1000万人，这也是毫无疑问的。考虑到25年前的出生人口超过2000万，并且适婚人口结婚率持续下降的趋势，2022年的适婚人口结婚率也必定是低于50%了。
+
+年轻人的国人不愿意结婚，已经是事实。这已经是连续9年的持续下跌，较峰值的2013年，已经是完完全全的腰斩。从现在的情况来看，2023年也乐观不到哪里去。就目前而言，并不是缺少年轻人，而是年轻人拒绝结婚。没有了婚姻，就没有了生育、消费、劳动力，以及整个国家的未来。可以说，一个国家的稳定和持续发展，其实就是建立在婚姻的基础之上。
+
+![](/images/20230612003.jpg)
+
+![](/images/20230612004.jpg)
+- - -
+考虑以下几个问题：
+
+年结婚人数已下降到六百万对的区间并且还会持续下降；
+
+年轻人失业率超过20%，大学毕业生七成找不到正经工作，并且该情况将会长期持续；
+
+社会福利体系薄弱，在职的单亲妈妈无法完成抚育婴儿的责任；
+
+可能生育二胎三胎宝宝的80后妈妈们都已经直奔四十岁而去。
+
+我的结论是：预计在两年后，也就是80后妈妈有一半超过四十岁之后，中国的年出生人口将会快速下降到五百万的数量级，然后长期维持较低速的下降。而年死亡人口将会在目前一千万的水平上呈现快速上升趋势，毕竟医学的效果是有限的，老年化带来的死亡无可抵抗。所以，大概两年后，中国人口每年减少五百万以上并将会长期维持。
+如果没有真正强有力的措施，这就是中国较为长期的人口趋势了。
+- - -
+6.12
+
+为什么“城投债净融资”是观察中国当下经济的非常好的指标呢？
+
+地方政府的公开债务主要成两类：由省财政厅统一发行的地方债，以及由地方平台公司自主发行的城投债券。城投债券的管理相对地方债来说十分松散，也可以随便挪用，不讲究专款专用。因此城投债乃是地方政府的神器，化解财政压力的终极手段。
+
+各位必须要知道的是，现在整体上政府债务都靠借新还旧，指望财政自己掏钱出来还本，是不可能的。无论正规的地方债还是不太正规的城投债，在以往的年份，发行总量的七成左右都是还旧债的。正规的地方债还好，不太担心发行问题，毕竟是省财政厅统一发行。城投债很容易就出现信心不足问题，认购量一旦不足，发行受阻，分分钟就融不到足够的钱来偿还旧债。体现在数据上，就是净融资额为负。
+
+这个时候，就需要地方政府从自己口袋里掏钱还债，这是绝对掏不出来的。于是，债务风暴就发作了。
+- - -
+关于今年的外贸情况，我再给出一组参考数据。香港是中国大陆最大的转口贸易港，没有之一。从香港的进出口数据，我们可以反过来推测大陆的外贸进出口情况。今年1-4月，香港进口规模为1834亿美元，同比去年同期的2095亿美元，降幅12.5%。注意香港的进口主要是代替大陆完成的进口。1-4月香港出口规模为1644亿美元，同比去年同期1968亿美元，降幅16.5%。注意香港的出口同样也是代替大陆完成的出口。
+
+这种降幅与中国大陆海关的数据不相符，海关的数据只是极微弱的下降而已；但是这种降幅与大陆统计局和外汇管理局的数据是一致的，也都是下降15%左右。如此形成印证，这大致就是今年1-4月的的外贸真实降幅吧。
