--- a/source/_posts/禁言82天之后（推特号：老蛮频道-2023-06-08）.md
+++ b/source/_posts/禁言82天之后（推特号：老蛮频道-2023-06-08）.md
@@ -99,3 +99,42 @@ tags:
 关于今年的外贸情况，我再给出一组参考数据。香港是中国大陆最大的转口贸易港，没有之一。从香港的进出口数据，我们可以反过来推测大陆的外贸进出口情况。今年1-4月，香港进口规模为1834亿美元，同比去年同期的2095亿美元，降幅12.5%。注意香港的进口主要是代替大陆完成的进口。1-4月香港出口规模为1644亿美元，同比去年同期1968亿美元，降幅16.5%。注意香港的出口同样也是代替大陆完成的出口。
 
 这种降幅与中国大陆海关的数据不相符，海关的数据只是极微弱的下降而已；但是这种降幅与大陆统计局和外汇管理局的数据是一致的，也都是下降15%左右。如此形成印证，这大致就是今年1-4月的的外贸真实降幅吧。
+- - -
+我这两天在推上看到了一些对于89运动的深刻的反思，尤其是一些当时亲历者的反思，在现在这个时点回顾当年，这种反思尤其显得珍贵。
+
+不知道这种反思是不是与我一周前的公开批评有关，我的看法是：推特上终于有了思考和论辩，而不再仅仅只是情绪的宣泄+信息碎片的垃圾场，这就是很好的事情了。
+- - -
+6.13
+
+这是一份来自小蓝鸟的点菜。这位同学想了解我对AI的看法。好吧，我直接给出结论：现在的AI技术，天花板十分明显，它根本无法推动第四次工业革命的到来。第一次和第二次技术革命，都是能源应用方式上的革命。唯有更有效的使用能源，才能提升人类改革大自然的能力，有效应对整个地球和宇宙规则的残酷挑战。大自然的规则其实非常残酷的，人类也就是在第二次工业革命之后，才能勉强说有了一点在残酷的大自然的威压之下挣扎求生的能力。综合运用各种现代重型机械，人类可以尽快的逃离自然灾难，并且在自然灾难发生之后可以尽快重建，只不过如此而已。至于制止灾难本身，那还是科幻题材的内容。当然现代社会人类飘了，欧美极左派自以为可以反过来通过降低碳排放这种微不足道的小事情讨好大自然，冷酷的大自然根本就不在乎好吧。
+
+信息技术革命在本质上其实只是人类处理信息的速度提升而已，但是能源使用效率并没有什么变化。将各种形式的太阳能（石油和煤炭一样，本质上都是太阳能）转化为电和热，只不过如此而已。没有在本质上提升能源使用效率，信息技术革命是不是能构成第三次工业革命，争议非常大，不过我这里勉强依然算它是吧。
+
+真正的工业革命可以是什么呢？比如说储能技术爆发，一部手机这么大的电池就能让我们穿个小背心在南北极活动一周，每天如沐春风。比如便携式核能，大家都能随便装在背包里，然后背起来就满世界飞，人人都是钢铁侠。如果这两项不靠谱，那么更靠谱一点的，将太阳能转化为电能的转化率提升到90%，目前大概仅20%左右。能做到这些，就是第四次工业革命。能源使用效率出现质的变化，带动整个机械、制造、交通、家电、通讯领域的全面革命。
+
+至于AI技术，它不可能对能源使用效率做出任何的提升，即便我们穷尽所有想象力都不可能，不存在这个发展方向。AI技术目前可以做什么呢？存在标准答案的机械性智力活动，AI逐渐会予以替代。在这方面，我自己都算是深度AI用户，就我现在的头像就是AI绘图作品，我的文章配图和视频素材，大量使用了AI作品，确实省时省力。下面这副机器人在宇宙飞船上吃饭的图，百度文心一格用时只需要10秒，画面风格、机器人的个数、桌上有几盘菜、窗外的场景都可以自行定义。
+而这些“定义”的动作，本身就是向标准答案靠拢，让人类在AI创作中挑选出最符合标准答案的那一个。日常的工作汇报文案，AI可以很轻易的生成PPT模板，这方面已经很强了。这当然也是就着标准答案回答问题。或者是影视背景音乐，AI现在都能自动生成，你输入想要的标准定义，AI生成你想要的几条旋律，供你挑选。还有包括机械性的编程工作，存在标准编程模板只需要套入不同应用场景的工作，大概率都会被AI替代。至于学生们的家庭作业，那更是机械性智力劳动，这方面AI无比强大。相信以后学校必须想办法跟AI对抗，毕竟家庭作业是对学生脑力的训练，机械性的重复训练是脑力成长的必须步骤，不能放弃。
+
+然而也就是这样了。AI甚至无法完成基础数据的收集工作，比如广州东山口的商务公寓现时点的租金情况，这种最基础的数据收集，可以说没有任何技术含量的体力工作，AI无法替代。它能做的就是去中介网站上搜集数据，但是我们人类都知道，中介网站上的租金数据都是错的，而AI无法分辨这些数据的真伪。或许AI可以进化到冒充人类给一个人类中介打电话，来核实租金的真伪。但是我们人类虚伪得很，不见到真人我们都不说实话。这倒不是在有意欺骗AI，而是我们连人类都一样这么骗。
+
+类似这样的事情比比皆是，在整个人类社会，AI能做到的，就是替代一部分存在标准答案的机械性脑力活动。仅此而已。AI如果要进一步发展，必须与工业机器人进行深度绑定。但是现在这种绑定可以说万里长征还没开始走。工业机器人到现在这一刻只能从事最简单的拧螺丝、包装、分单等工作，它受限于的领域太多了。如何赋予机器人以真正的视觉、听觉、触觉、嗅觉、味觉和判断力，比如让它们可以真正的品尝一顿饭，并评价好不好吃，这样的机器人才是真正的工业机器人，而这些技术，本质上就是AI技术。现在大家一通热潮的AI技术，其实就是大数据技术做到极致，把数据库做到极其庞大之后的效果，也就是这样了。这种东西应用到机器人身上，大概就是可以让机器人能够跟人对对话扯扯淡什么的，让一些蠢人很难分辨与自己对话的到底是AI还是机器人。而这些东西，与让机器人建立真正的五感，从而成长为真正的机器“人”，一毛钱的关系都没有。
+
+图二就是百度文心一格的作品，挺好玩的对吧？我其实挺期待机器人可以建立五感，达到真正“类人”的那一天。不过要达到这种程度，首先人类必须把五感在本质上是什么搞明白，也就是把人类自身的神经系统和大脑系统弄明白，才能数据化之后应用到机器人身上。现在人类自己都糊里糊涂的，连老年痴呆症都治疗不了，甚至连发病原理都不了解。“智慧”本身到底是什么，存在于人体的什么部位，为什么智慧会消失，为什么有些人会突发精神疾病，人类统统不了解，这就幻想AI可以带来技术革命，这就是瞎扯淡了。
+- - -
+接着上一条的话题，来说说我一直有所期待的技术革命的突破方向：远距离无线输电。
+
+现在这一技术发展到了可以在约50米的距离进行无线输电，输送效率约10%。这其实已经有点意思了，距离真正的高效率远程无线输电，可能真的就差临门一脚了。
+
+这么说吧，如果能做到一到两公里内的无线输电，输送效率超过95%的话，那么人类世界的整个能源供应方式就会变了。与现在的手机信号基站一样，以后就是能源发射基站+接收器，每家每户，每部汽车，都这么获取能源。你的电视摆在任何地方都能看，不用就着插座，你的手机永远都有电。在南极建一个能源基站，周边两公里就成为人间乐土。这，就是我的概念里，最可能的，最可行的，技术革命的突破口。
+- - -
+真是唏嘘。2021年房企单月融资额超过1500亿，现在下降到两三百亿，只剩下极少数央企地产公司还有融资能力。地产行业在整体上已经死了。现在这个时刻还冲进去买期房的，我不知道他们的脑子里到底装着什么，但一定不是脑瓜子。
+- - -
+感慨一下，中国地产企业的月度融资规模，2021年高达1500亿人民币，2022年下降到1000亿。到今年，三月份的时候还有600亿，到五月份已经下降到260亿了。
+
+地产已死，有事也别烧纸。
+
+90年日本地产泡沫破灭，98年东南亚地产泡沫破灭，08年美国地产泡沫破灭，结局各有不同。且看中国这一次的结局是什么吧。
+- - -
+**收集整理跟踪不易，随缘赞赏，以示鼓励。**
+
+![](/images/reward.jpg)
