--- a/source/_posts/浪急风高（微博号：老蛮频段-2023-06-14）.md
+++ b/source/_posts/浪急风高（微博号：老蛮频段-2023-06-14）.md
@@ -1,10 +1,9 @@
-title: 浪急风高（微博号：老蛮频段 2023.06.14）
+title: 浪急风高（微博号：老蛮频段 2023.06.14 - 2023.06.15）
 author: laoman
 date: 2023-06-14 20:18:38
 tags:
 ---
-
-看到前面那条推里有些人言之凿凿，中国可以使用禁止房产交易的方式阻止房价下跌，真的是觉得，推特真是集中了简体中文世界的奇葩们啊。
+看到前面那条推里有些人言之凿凿，中国可以使用禁止房产交易的方式阻止房价下跌，真的是觉得，推特真是集中了简体中文世界的奇葩们啊。<!--more-->
 
 这样，中国五成的银行贷款是以住房抵押为征信手段的，以至于贷款违约之后法拍房已经成为一种社会现象。现在，请问，禁止二手房交易之后，银行如何应对贷款违约？
 
@@ -30,4 +29,37 @@ tags:
 其它不能说了。
 
 ![](/images/20230614002.jpg)
+- - -
+**6.15**
+
+在制作前面这条城农商行视频的过程中，我真是一再的感慨，局面怎么就会变成这样。
+
+2013年因为银行表外资产失控造成钱荒，2015年因为政策强推牛市造成股灾，这两件事促使万亿美元逃离了中国。2016年强行启动房地产涨价去库存，酿成史无前例的地产泡沫；同时放开地方政府借债的限制，地方债和城投债因此猛烈增长。
+
+到现在这一刻，地产泡沫已经事实破灭；而城投债，也已经处于破灭的边缘。在接下来的风暴连锁反应之下，城商行和农商行这种地方性小银行，一定会第一批殉葬。而局面的进一步发展，无论怎么看，都乐观不到哪里去。
+
+可是，这一切，到底是为什么呢？怎么居然就走到现在这一步了呢？
+- - -
+我有一个观察经济的角度：早高峰时期的打车难易度。越容易打车说明经济越萧条。进入六月份以后，早高峰时期出租车每天在我小区门口排长龙等客，看起来就跟去年年底似的。跟司机们聊聊天，说的都是生意连去年底都不如。
+
+出租车司机，就是经济的晴雨表一般的存在啊。
+【我相信很多人已经忘记去年底的特别之处了】
+- - -
+按时间顺序来详细回顾这十年：
+
+1、2013年，银行表外资产（理解为银行规避监管放出去的高利贷就行了）猛烈扩张，到六月份已经达到了失控状态，表外资产总额58万亿，而当时银行业总资产也只不过150万亿而已。六月底央行忍无可忍，开始清理银行的表外业务，结果引发钱荒，银行之间的资金拆借利率长期维持在10%以上。为了回收资金，银行大量向中小微企业抽贷，这是近十年经济遭遇的第一波重创。
+
+2、2014年下半年，政府开始强行推涨股市。银行不限量的借钱给券商，并放纵券商给股民配资加杠杆炒股。民间资金闻风而动，纷纷参与配资炒股的大业，吸引进股市的杠杆资金无法精准统计，以数十万亿计。到2015年六月，这场人为的杠杆狂欢戛然而止，杠杆轰然断裂，日日千股跌停，一直持续到2016年初，跌掉了期间的全部涨幅。数十万亿资金，灰飞烟灭。这是第二波重创。
+
+3、2015年底，开始自上而下推行“地产去库存”，2016年推行到了全国。在购房人这边，银行敞开了向购房者提供按揭贷款，不做任何限制，各金融机构还趁势推出了“首付贷”、“装修贷”等产品，购房者一分钱不用出就可以买房。在开发商那边，资金宽松到甚至连拍地保证金都可以向银行或其它金融机构借，买地完全不用花自有资金。如此宽裕的资金环境，引发地价与房价齐飞，房地产泡沫达到了史无前例的程度：城镇居民收支结余的九成都用于买房，银行50%的贷款都是房地产抵押贷款，政府40%的收入都源于地产，只算地方政府的话占比超过五成。
+
+2022年，地产泡沫终于轰然破灭，百强地产商在一年内有40多家债务实质性违约。连锁反应到2023年迅速向外蔓延。这是经济的第三波重创。
+
+4、2016-17年，欧美各国就中国履行入世承诺不力的情况（44条关键承诺仅履行22条），多次向中国提出严肃抗议。中国方面不予理睬。2017年底特朗普访华，提出中国增加自美进口的请求，并列出了详细清单。中国方面当时全部应允，此后不予理睬。
+2018年3月底中美贸易战正式开打，双方互加关税。至2020年1月中旬，双方终于达成第一阶段协议，中国同意增加自美进口两千亿美元。签约后中国未履行。
+欧美日韩台自此达成共识：重建“去中国化”的国际贸易新协定，现在该新协定已经初具雏形。这是经济的第四波重创。
+
+5、2020初，为了应对新冠管控带来的地方财政压力，放松了地方债的发行管控，地方政府的债务规模暴增六成。尤其是相对不规范的城投债，已经处于全面爆雷状态。这是经济的第五波重创。
+
+老实说，中国经济到现在还能维持运转，这已经是中国人民具备极强承受力，经济具备极强韧性的表现了。可惜，第六波的城农商行危机，第七波的就业危机，都已经在路上了。中国人到底还能承受多少波啊。
 - - -
