--- a/source/_posts/浪急风高（微博号：老蛮频段-2023-06-14）.md
+++ b/source/_posts/浪急风高（微博号：老蛮频段-2023-06-14）.md
@@ -1,4 +1,4 @@
-title: 浪急风高（微博号：老蛮频段 2023.06.14 - 2023.06.15）
+title: 浪急风高（微博号：老蛮频段 2023.06.14 - 2023.06.17）
 author: laoman
 date: 2023-06-14 20:18:38
 tags:
@@ -63,3 +63,69 @@ tags:
 
 老实说，中国经济到现在还能维持运转，这已经是中国人民具备极强承受力，经济具备极强韧性的表现了。可惜，第六波的城农商行危机，第七波的就业危机，都已经在路上了。中国人到底还能承受多少波啊。
 - - -
+悲伤的事情是，我五年前说，中国将会因为缺乏适格借款人，而陷入开不动印钞机的尴尬境地。现在大家都看到了，资金空转进不去实体，空有庞大的M2，各行各业全都缺钱。
+
+这些年我一再强调的，楼市泡沫风险，居民端和地方政府端的债务风险，失业风险，外贸风险，大家也全都看到了。
+哪怕这些预测有一件没有发生，我都能提出应对办法，并且我一直都在提办法。现在真的是，，，，随缘吧。
+- - -
+6.16
+
+5月的经济数据没有什么出奇之处，依然延续从4月份开始的坍塌趋势。最关键的当然还是投资。我一再的强调，投资才是支撑中国经济走过这40年的最重要的因素，没有之一。
+
+5月份当月的固投规模41333亿，对比2022年5月份的52420亿，降幅达到了21.2%。去年5月份是什么情况大家是知道的（V区的朋友们的记忆力肯定都是可以的），今年5月份的固投居然还能比去年5月份低这么多，我实在是无法评价。受此连累，1-5月份的累计固投同比下降8.3%（图一）。按现在这个趋势，如果老百姓的投资热情不能恢复，今年的固投整体降幅应该会超过2019年13.2%的此前最大降幅。
+没有投资就没有一切，还会有一系列的连锁反应。首当其冲的，就是无法提供足够的就业岗位，所以青年失业率超过20%，各地外卖员和网约车司机接连达到饱和状态。这么说吧，现在我国24岁以下青年失业率超过20%，但是35岁以上的大龄中年，就业情况一样惨淡，只是我国扯淡的失业调查机制没法查出来罢了。
+
+社会融资增量数据，你们理解成全社会新增的债务就行，1-5月份达到17.31万亿，较2022年同期的15.82万亿，增幅达到9.4%。各位，你们必须记住一条，借新债的目的必须是为了促进投资，这一条定律不仅在中国成立，在外国也成立。现在我国新增的债务无法拉动投资，这意味着债务处于滚雪球状态，借新债的目的主要就是为了偿还旧债的本息，如此空滚，对投资的拉动作用越来越弱。
+
+这就是为什么我国今年货币膨胀得相当厉害，5月份的M2（货币总量）达到282.05万亿，较2022年5月的252.70万亿，同比增幅为11.6%，但各行各业都缺钱的原因。因为印出来的钱大都拿去还旧债了。我举个例子，今年1-5月新发行的国债规模36091亿，较2022年同期29036亿，增幅高达24.3%。看起来国家应该有钱拉动基础设施投资了似的。但是这笔钱的85.2%，都被拿去还旧债了。真正可以拿来花的部分，只剩下5324亿（图2）。为什么现在偿债压力这么大，因为过去3年，政府的债务规模膨胀了足足6成。这就意味着政府如果要有钱拉动投资，就需要发更多的债，增幅24%是远远不够的，至少要达到50%。每年50%的国债发行规模增幅是什么概念各位可以理解吗？这就是摆在各位面前的滚雪球效应，活生生的例子。
+
+其它方面，海关终于承认出口不行了，5月份当月货物外贸出口2833亿美元，较2022年5月的3083亿美元，降幅8.1%。其它口径的出口数据，包括外汇管理局和国家统计局关于出口的5月份数据还没出来，不过按今年以来的惯例，外管局和统计局的出口降幅一直大大超过海关。我相信5月份连海关这边的数据都撑不住了，外管局和统计局的数据应该会更加惨淡。
+
+其它不评价了。
+
+![](/images/20230617001.jpg)
+
+![](/images/20230617002.jpg)
+- - -
+关于5月份的经济数据，我只在这里公开说一句：固投绝对值41333亿，对比2022年5月份的52420亿，降幅21.2%。这是企业家信心丧失的表现。而要恢复私营部门信心，靠经济刺激措施是没有用的。越刺激，信心丧失得越快。
+如果有些措施不愿意用，至少，学习汉初的休养生息，这一条不难吧？政府无为而治三年，企业信心就可以恢复了。
+- - -
+中国的就业数据和失业数据的调查过程，都是一言难尽。
+这里必须解释一下，就业和失业是两个方向上的数据，一个不能代替另一个，也不能使用相同的调查方式。
+现在我国的就业数据主要靠代表性企业自己填报，到基层统计部门汇总一下，科长们以此估算辖区内的全部就业数据，包括分行业的就业数据，然后逐层上报，形成最终的统计结果。科长们的估算自有其章法，绝对值可能有水份，不过每年的水份都差不多，所以计算相对增减幅度是可信的。但是，统计部门从2019年之后不再发布民营企业和个体户的就业数据，这里包含了足足七成的就业人口。所以我们从此就对于就业情况的演变一无所知。难道是就业情况太好了国家统计局担心我们太骄傲了，才不告诉我们这个关键数据？
+
+至于失业率调查，这是由统计部门自行调查，主要调查方式是入户调查，最核心手段是去企业宿舍展开调查你敢不敢信？我都不能理解这个逻辑。你去企业宿舍调查就业人数我可以理解，你调查失业人数你准备怎么查？你不如随机打30万个电话来得更有代表性。至于调查标准，户籍在农村就不算失业，每周工作一小时就不算失业，我都无法吐槽了。
+
+还是安心吃土吧。
+- - -
+6.17
+
+中国的就业数据和失业数据的调查过程，都是一言难尽。
+这里必须解释一下，就业和失业是两个方向上的数据，一个不能代替另一个，也不能使用相同的调查方式。
+现在我国的就业数据主要靠代表性企业自己填报，到基层统计部门汇总一下，科长们以此估算辖区内的全部就业数据，包括分行业的就业数据，然后逐层上报，形成最终的统计结果。科长们的估算自有其章法，绝对值可能有水份，不过每年的水份都差不多，所以计算相对增减幅度是可信的。但是，统计部门从2019年之后不再发布民营企业和个体户的就业数据，这里包含了足足七成的就业人口。所以我们从此就对于就业情况的演变一无所知。难道是就业情况太好了国家统计局担心我们太骄傲了，才不告诉我们这个关键数据？
+
+至于失业率调查，这是由统计部门自行调查，主要调查方式是入户调查，最核心手段是去企业宿舍展开调查你敢不敢信？我都不能理解这个逻辑。你去企业宿舍调查就业人数我可以理解，你调查失业人数你准备怎么查？你不如随机打30万个电话来得更有代表性。至于调查标准，户籍在农村就不算失业，每周工作一小时就不算失业，我都无法吐槽了。
+
+还是安心吃土吧。
+- - -
+从08年金融海啸开始，我国就习惯了所谓“经济刺激政策”。在此之前，地方政府被严厉禁止借债，地方债闻所未闻，更没有所谓地方平台企业和城投债这回事。08年的金融海啸冲击让整个经济决策层一日三惊，于是解开了地方政府的借债束缚。
+
+08年之后，2013年钱荒搞刺激，2015年股灾搞刺激，2016年地产搞刺激，2020年新基建搞刺激。到今时今日，地方债+城投债超过了五十万亿，再加上地方性的隐形债务和经营性债务，六十万亿绝对是有的。这就是持续15年经济刺激政策的代价——地方政府债务失控，并且已经开始暴雷。这还没考虑老百姓被掏空了腰包，普遍背上了二三十年的债，穷得叮当响。
+
+现在的经济形势，比08年还惨淡。中美脱钩，投资剧降，房地产暴雷，地方政府债台高筑，出口萎缩，外资撤出，失业率大增，人口负增长，民间信心荡然无存。在现在的债务基础上继续搞刺激？怎么刺激？？由谁来充当借债主体？？？
+
+对现在整个金融圈和经济圈万众期待的下一轮地产刺激和投资刺激措施，我只有一个评价：如果真的搞这种刺激，那么接下来的两脚羊时代，就会比你们想象的，来得更加快，更加酷烈。
+- - -
+1、当前银行息差已经降到了无法覆盖坏账的程度，大幅调降存款利息又担心引发储户恐慌。因此，在目前的情况下再降贷款利息，中小型银行文大概率会全面崩塌。
+
+2、老百姓没钱买房了，再怎么降低购房门槛都没用。
+
+3、企业缺的不是钱，是订单，尤其是最挣钱的出口订单。
+
+4、无法做中长期规划，于是企业家停止了固定资产投资。
+
+不管接下来的“主动作为”的政策是什么，请从上面四点入手。如果觉得无从下手，请什么都不要做，安静三年，上面四点自然就解决了。谢谢了。
+- - -
+**收集整理跟踪不易，随缘赞赏，以示鼓励。**
+
+![](/images/reward.jpg)
